force-app/main/default/objects/Opportunity/fields/CPI__c.field-meta.xml
<CustomField>
    <fullName>CPI__c</fullName>
    <description>What is the CPI provision for this agreement?</description>
    <inlineHelpText>What is the CPI provision for this agreement?</inlineHelpText>
    <label>CPI</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CPI plus 10%</fullName>
            </value>
            <value>
                <fullName>CPI plus 5% or better</fullName>
            </value>
            <value>
                <fullName>Less than CPI plus 5%</fullName>
            </value>
            <value>
                <fullName>Not applicable (existing T&amp;Cs set)</fullName>
            </value>
            <value>
                <fullName>Silent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>