force-app/main/default/objects/Opportunity/fields/Create_Merge_Project_in_OA__c.field-meta.xml
<CustomField>
    <fullName>Create_Merge_Project_in_OA__c</fullName>
    <description>This field is used in Talend Integration of Open Air and Salesforce</description>
    <inlineHelpText>&quot;Create a new project&quot; - Creates a new project in OA
&quot;Merge with existing project&quot; - Merges with a project specified in the project lookup</inlineHelpText>
    <label>Create or Merge with OA Project?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Create a new project</fullName>
            </value>
            <value>
                <fullName>Merge with existing project</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>