force-app/main/default/objects/Opportunity/fields/Criteria_2__c.field-meta.xml
<CustomField>
    <fullName>Criteria_2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>2-Use Case Established</label>
    <type>Checkbox</type>
</CustomField>