force-app/main/default/objects/Opportunity/fields/Current_integration_development_plan__c.field-meta.xml
<CustomField>
    <fullName>Current_integration_development_plan__c</fullName>
    <description>How do you currently plan to develop these integrations?</description>
    <inlineHelpText>How do you currently plan to develop these integrations?</inlineHelpText>
    <label>Current integration development plan</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>