force-app/main/default/objects/Opportunity/fields/Current_manual_processes_workflows__c.field-meta.xml
<CustomField>
    <fullName>Current_manual_processes_workflows__c</fullName>
    <description>1.	Which workflow processes currently require manual intervention?
2.	What processes are currently manual that you would like to automate?</description>
    <inlineHelpText>1.	Which workflow processes currently require manual intervention?
2.	What processes are currently manual that you would like to automate?</inlineHelpText>
    <label>Current manual processes / workflows</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>