force-app/main/default/objects/Opportunity/fields/Current_Period_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Current_Period_Opportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Part of Technical Debt Project: Week 9 fields (Expiring June 8)</description>
    <label>Practice Follow Up (Expiring June 8)</label>
    <type>Checkbox</type>
</CustomField>