force-app/main/default/objects/Opportunity/fields/Current_Stage_Notes__c.field-meta.xml
<CustomField>
    <fullName>Current_Stage_Notes__c</fullName>
    <description>Part of Technical Debt Project: Week 7 fields (Expiring May 25)</description>
    <label>Current Stage Notes (Exp May 25)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>