force-app/main/default/objects/Opportunity/fields/Current_Term_Expiration__c.field-meta.xml
<CustomField>
    <fullName>Current_Term_Expiration__c</fullName>
    <label>Current Term Expiration</label>
    <type>Date</type>
</CustomField>