force-app/main/default/objects/Opportunity/fields/Date_Invoice_Approved_to_send_to_Finance__c.field-meta.xml
<CustomField>
    <fullName>Date_Invoice_Approved_to_send_to_Finance__c</fullName>
    <label>Date Invoice Approved to send to Finance</label>
    <type>Date</type>
</CustomField>