force-app/main/default/objects/Opportunity/fields/Deal_Quality_Notes__c.field-meta.xml
<CustomField>
    <fullName>Deal_Quality_Notes__c</fullName>
    <label>Deal Quality Notes</label>
    <type>TextArea</type>
</CustomField>