force-app/main/default/objects/Opportunity/fields/Deal_Review_Meeting_Date__c.field-meta.xml
<CustomField>
    <fullName>Deal_Review_Meeting_Date__c</fullName>
    <description>Date this deal was reviewed on.</description>
    <label>Deal Review Meeting Date</label>
    <type>Date</type>
</CustomField>