force-app/main/default/objects/Opportunity/fields/Decision_Criteria_Req_Capabilities__c.field-meta.xml
<CustomField>
    <fullName>Decision_Criteria_Req_Capabilities__c</fullName>
    <description>The criteria that will be used to distinguish between competing solutions. It’s often a combination of technical and economic, and can be objective or subjective (or sometimes both).</description>
    <label>Decision Criteria Score</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>