force-app/main/default/objects/Opportunity/fields/Delivered_Business_Case_ROI__c.field-meta.xml
<CustomField>
    <fullName>Delivered_Business_Case_ROI__c</fullName>
    <label>Delivered Business Case / ROI?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>