force-app/main/default/objects/Opportunity/fields/Discount_Level_Services__c.field-meta.xml
<CustomField>
    <fullName>Discount_Level_Services__c</fullName>
    <label>Discount Level - Services</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>