force-app/main/default/objects/Opportunity/fields/Early_Launch_Practice_Comments__c.field-meta.xml
<CustomField>
    <fullName>Early_Launch_Practice_Comments__c</fullName>
    <description>To help us assess this deal for a product in early development or early launch, what do the Practice and Sales teams have to say?

Part of Technical Debt Project: Week 6 fields (Expiring May 18)</description>
    <inlineHelpText>To help us assess this deal for a product in early development or early launch, what do the Practice and Sales teams have to say?</inlineHelpText>
    <label>Practice Group comments(Expiring May 18)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>