force-app/main/default/objects/Opportunity/fields/Early_Launch_Sales_comments__c.field-meta.xml
<CustomField>
    <fullName>Early_Launch_Sales_comments__c</fullName>
    <description>To help us assess this deal for a product in early development or early launch, what do the Practice and Sales teams have to say?

Part of Technical Debt Project: Week 8 fields (Expiring June 1)</description>
    <inlineHelpText>To help us assess this deal for a product in early development or early launch, what do the Practice and Sales teams have to say?</inlineHelpText>
    <label>Sales comments (Expiring June 1)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>