force-app/main/default/objects/Opportunity/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <inlineHelpText>This is the date that the billing pause ends and the billing restarts.</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>