force-app/main/default/objects/Opportunity/fields/Engagement_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Trigger__c</fullName>
    <description>Allows us to capture campaign information when we have inbound contact discrepancies</description>
    <label>Intapp Campaign</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cold Contact</fullName>
            </value>
            <value>
                <fullName>Inbound Contact</fullName>
            </value>
            <value>
                <fullName>Introduction</fullName>
            </value>
            <value>
                <fullName>Referral</fullName>
            </value>
            <value>
                <fullName>Referral (PLA)</fullName>
            </value>
            <value>
                <fullName>Referral (Mark)</fullName>
            </value>
            <value>
                <fullName>Referral (Kathy Kibby)</fullName>
            </value>
            <value>
                <fullName>Referral (Elite)</fullName>
            </value>
            <value>
                <fullName>LawNet 2004</fullName>
            </value>
            <value>
                <fullName>Apr04 Webinar</fullName>
            </value>
            <value>
                <fullName>Jul04 Webinar</fullName>
            </value>
            <value>
                <fullName>Oct04 Webinar</fullName>
            </value>
            <value>
                <fullName>Jan05 Prospect Webinar</fullName>
            </value>
            <value>
                <fullName>Feb05 Webinar</fullName>
            </value>
            <value>
                <fullName>Apr05 Prospect Webinar</fullName>
            </value>
            <value>
                <fullName>May05 Suspect Webinar</fullName>
            </value>
            <value>
                <fullName>Jul05 Prospect Webinar</fullName>
            </value>
            <value>
                <fullName>Jul05 Small Firm Email</fullName>
            </value>
            <value>
                <fullName>Aug05 ILTA Show</fullName>
            </value>
            <value>
                <fullName>Sep05 ILTA Webinar</fullName>
            </value>
            <value>
                <fullName>Sep05 Northeast Outreach</fullName>
            </value>
            <value>
                <fullName>Oct05 Midsized Webinar</fullName>
            </value>
            <value>
                <fullName>Nov05 Suspect Webinar</fullName>
            </value>
            <value>
                <fullName>Nov05 3.2  Webinar</fullName>
            </value>
            <value>
                <fullName>Feb06 Suspect Webinar</fullName>
            </value>
            <value>
                <fullName>Jan06 LegalTech Show</fullName>
            </value>
            <value>
                <fullName>Apr06 Ethical Walls Campaign</fullName>
            </value>
            <value>
                <fullName>Apr06 Calling Campaign</fullName>
            </value>
            <value>
                <fullName>Jun06 ILTA PM Webinar</fullName>
            </value>
            <value>
                <fullName>2006 Regional Events</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>