force-app/main/default/objects/Opportunity/fields/Ethical_Walls_Security__c.field-meta.xml
<CustomField>
    <fullName>Ethical_Walls_Security__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ethical Walls/Security</label>
    <type>Checkbox</type>
</CustomField>