force-app/main/default/objects/Opportunity/fields/Exclude_from_Notifications__c.field-meta.xml
<CustomField>
    <fullName>Exclude_from_Notifications__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exclude from Notifications</label>
    <type>Checkbox</type>
</CustomField>