force-app/main/default/objects/Opportunity/fields/Firm_has_time_entry_policy__c.field-meta.xml
<CustomField>
    <fullName>Firm_has_time_entry_policy__c</fullName>
    <description>Does the firm have a stated time entry policy?

Part of Technical Debt Project: Week 8 fields (Expiring June 1)</description>
    <inlineHelpText>Does the firm have a stated time entry policy?</inlineHelpText>
    <label>Firm has time entry policy? (Exp June 1)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>