force-app/main/default/objects/Opportunity/fields/Firm_Procurement_Team__c.field-meta.xml
<CustomField>
    <fullName>Firm_Procurement_Team__c</fullName>
    <inlineHelpText>Is there a separate department that you will have to negotiate with after you finish negotiations with your buyer?</inlineHelpText>
    <label>Separate Procurement Group?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Don&apos;t know</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>