force-app/main/default/objects/Opportunity/fields/Flow_Triggered_by_Proposed_Stage_Change__c.field-meta.xml
<CustomField>
    <fullName>Flow_Triggered_by_Proposed_Stage_Change__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This box gets checked when a user changes the proposed stage. This is used to ensure users can get around the validation rule &quot;Stage Name Cannot Be Changed&quot; for auto approved opportunities.</description>
    <label>Flow Triggered by Proposed Stage Change</label>
    <type>Checkbox</type>
</CustomField>