force-app/main/default/objects/Opportunity/fields/Forecast_Notes__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Notes__c</fullName>
    <label>Forecast Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>