force-app/main/default/objects/Opportunity/fields/Forecast_tracking_June__c.field-meta.xml
<CustomField>
    <fullName>Forecast_tracking_June__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is this opportunity being tracked?

Part of Technical Debt Project: Week 6 fields (Expiring May 18)</description>
    <inlineHelpText>Is this opportunity being tracked?</inlineHelpText>
    <label>Forecast tracking - June (Exp May 18)</label>
    <type>Checkbox</type>
</CustomField>