force-app/main/default/objects/Opportunity/fields/Forecast_tracking_May__c.field-meta.xml
<CustomField>
    <fullName>Forecast_tracking_May__c</fullName>
    <defaultValue>false</defaultValue>
    <description>3.28.2019 Jose  needs fill up the values for a testing</description>
    <label>Slipped Deal</label>
    <type>Checkbox</type>
</CustomField>