force-app/main/default/objects/Opportunity/fields/Forecasted_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Forecasted_Outcome__c</fullName>
    <label>Forecasted Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Expect to Lose</fullName>
            </value>
            <value>
                <fullName>Uncertain</fullName>
            </value>
            <value>
                <fullName>Expect to Save</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>