force-app/main/default/objects/Opportunity/fields/Identified_Pain_Neg_Consequences__c.field-meta.xml
<CustomField>
    <fullName>Identified_Pain_Neg_Consequences__c</fullName>
    <description>What pain is suffered, and by whom, if the decision is delayed or if the purchase doesn&apos;t go ahead at all? What is the business impact of doing nothing?</description>
    <label>Identified Pain Score</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>