force-app/main/default/objects/Opportunity/fields/IMF_Upside__c.field-meta.xml
<CustomField>
    <fullName>IMF_Upside__c</fullName>
    <description>SC-000002
Use this field to determine which forecast the opportunity should be in.</description>
    <label>IMF/Upside REPLACED BY FORECAST CATEGORY</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Manager Forecast</fullName>
            </value>
            <value>
                <fullName>Upside</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>