force-app/main/default/objects/Opportunity/fields/Incumbent_Solution__c.field-meta.xml
<CustomField>
    <fullName>Incumbent_Solution__c</fullName>
    <inlineHelpText>Please include any additional Incumbent Solution values in the Expression of Interest Notes field.</inlineHelpText>
    <label>Incumbent Solution</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Accutrac</fullName>
            </value>
            <value>
                <fullName>Aderant</fullName>
            </value>
            <value>
                <fullName>Aderant Conflicts</fullName>
            </value>
            <value>
                <fullName>Aderant Workflow</fullName>
            </value>
            <value>
                <fullName>Adobe Workflow</fullName>
            </value>
            <value>
                <fullName>Advanced Legal</fullName>
            </value>
            <value>
                <fullName>Affinity</fullName>
            </value>
            <value>
                <fullName>Axxia</fullName>
            </value>
            <value>
                <fullName>Bellefield iTimeKeep</fullName>
            </value>
            <value>
                <fullName>BizTalk</fullName>
            </value>
            <value>
                <fullName>Carpe Diem Classic</fullName>
            </value>
            <value>
                <fullName>Carpe Diem Enterprise</fullName>
            </value>
            <value>
                <fullName>Compliguard</fullName>
            </value>
            <value>
                <fullName>Cordys Version 10 (OpenText)</fullName>
            </value>
            <value>
                <fullName>DMS</fullName>
            </value>
            <value>
                <fullName>Eclipse Proclaim</fullName>
            </value>
            <value>
                <fullName>Elegrity</fullName>
            </value>
            <value>
                <fullName>Elite (Envision)</fullName>
            </value>
            <value>
                <fullName>Elite 3E</fullName>
            </value>
            <value>
                <fullName>Elite Conflicts</fullName>
            </value>
            <value>
                <fullName>Elite WebView</fullName>
            </value>
            <value>
                <fullName>Excel</fullName>
            </value>
            <value>
                <fullName>Flosuite</fullName>
            </value>
            <value>
                <fullName>Foundation</fullName>
            </value>
            <value>
                <fullName>Fulcrum/SAP</fullName>
            </value>
            <value>
                <fullName>In house solution / on paper</fullName>
            </value>
            <value>
                <fullName>Intapp Product</fullName>
            </value>
            <value>
                <fullName>Interaction</fullName>
            </value>
            <value>
                <fullName>K2</fullName>
            </value>
            <value>
                <fullName>Kira</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>