force-app/main/default/objects/Opportunity/fields/IntApp_Exec__c.field-meta.xml
<CustomField>
    <fullName>IntApp_Exec__c</fullName>
    <label>Intapp Exec</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Dan Bressler</fullName>
            </value>
            <value>
                <fullName>Dan Tacone</fullName>
            </value>
            <value>
                <fullName>Don Coleman</fullName>
            </value>
            <value>
                <fullName>John Hall</fullName>
            </value>
            <value>
                <fullName>Pat Archbold</fullName>
            </value>
            <value>
                <fullName>Thad Jampol</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>